// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`развернет/свернет длинный дескрипшн при клике на "Читать дальше" 1`] = `
<div
  className="VinReportOfferDescription"
>
  <Memo(CardDescriptionHTML)
    description="Продаётся верный железный конь! В машину вложил душу и часть себя. Делал машину под себя , в основном для охоты. 
Вот часть того что сделал:
Отвязанный передний мост
Заменён маятниковый рычаг на усиление
Заменены рулевые тяги
Заменены кулаки с подшипниками и ступицами  на ивекко
Привода инж-техно
За..."
  />
   
  <Link
    onClick={[Function]}
  >
    Читать дальше
  </Link>
</div>
`;

exports[`развернет/свернет длинный дескрипшн при клике на "Читать дальше" 2`] = `
<div
  className="VinReportOfferDescription"
>
  <Memo(CardDescriptionHTML)
    description="Продаётся верный железный конь! В машину вложил душу и часть себя. Делал машину под себя , в основном для охоты. 
Вот часть того что сделал:
Отвязанный передний мост
Заменён маятниковый рычаг на усиление
Заменены рулевые тяги
Заменены кулаки с подшипниками и ступицами  на ивекко
Привода инж-техно
Заменен передний карданный вал на шрузовой
Усиленый подрамник для раздатки 
Задний мост в сборе  заменён на усиленый
Задние тяги заменены на трофи-профи
Заменён топливный баг на 160л"
  />
   
  <Link
    onClick={[Function]}
  >
    Скрыть
  </Link>
</div>
`;
